objects/System_Message__c.object
<CustomObject>
    <description>Used to send messages to users in the console.  Can also be used as an Exception reporting tool.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Handled Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhandled Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>System Message</label>
    <nameField>
        <label>System Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>